update README with new run command