@@ -17,4 +17,4 @@ Using maven to build/package. Can be run as basic java (>=1.8)
    - command for core order matching engine: mvn clean install
    - command: mvn package spring-boot:repackage
    - run: java -jar target/ordermatchingengineweb-1.0-SNAPSHOT.jar (simple)
-   - run with gc: java -XX:+UseG1GC -XX:+UseStringDeduplication -verbose:gc -XX:+PrintGCDetails -Xloggc:logs/gc.log -jar target/ordermatchingengineweb-1.0-SNAPSHOT.jar
+   - run with gc: java -XX:+UseG1GC -XX:+UseStringDeduplication -verbose:gc -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps -XX:+PrintReferenceGC -XX:+PrintGCDetails -Xloggc:logs/gc.log -jar target/ordermatchingengineweb-1.0-SNAPSHOT.jar
